<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.teste.tcc.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.teste.tcc.ui.visual.VisualFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_visual" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.teste.tcc.ui.audio.AudioFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_audio" />

    <fragment
        android:id="@+id/nav_dados"
        android:name="com.teste.tcc.ui.DadosFragment"
        android:label="@string/dados_app"
        tools:layout="@layout/fragment_dados" />
</navigation>