<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DadosFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.TCC.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbarDados"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/Theme.TCC.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/borda"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
                    app:layout_constraintVertical_bias="0.0">

                        <TextView
                            android:id="@+id/nomeHolder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="16dp"
                            android:text="TextView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/imageHolder"
                            app:layout_constraintTop_toTopOf="@+id/imageHolder" />
        
                        <TextView
                            android:id="@+id/plataformasHolder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="TextView"
                            app:layout_constraintEnd_toEndOf="@+id/nomeHolder"
                            app:layout_constraintStart_toStartOf="@+id/nomeHolder"
                            app:layout_constraintTop_toBottomOf="@+id/areaArteHolder" />
        
                        <TextView
                            android:id="@+id/areaArteHolder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="TextView"
                            app:layout_constraintEnd_toEndOf="@+id/nomeHolder"
                            app:layout_constraintStart_toStartOf="@+id/nomeHolder"
                            app:layout_constraintTop_toBottomOf="@+id/nomeHolder" />
        
                        <ImageView
                            android:id="@+id/imageHolder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:contentDescription="@string/app_icon_content_desc"
                            android:src="@drawable/ic_menu_home"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
        
                        <TextView
                            android:id="@+id/descHolder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="TextView"
                            android:textAlignment="textStart"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/plataformasHolder" />
        
                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/info_buttonToWebsite"
                            app:icon="@android:drawable/ic_menu_set_as"
                            app:layout_constraintEnd_toEndOf="@+id/descHolder"
                            app:layout_constraintStart_toStartOf="@+id/descHolder"
                            app:layout_constraintTop_toBottomOf="@+id/descHolder" />

                        <TextView
                            android:id="@+id/screenshotsDesc"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="TextView"
                            app:layout_constraintEnd_toEndOf="@+id/button"
                            app:layout_constraintStart_toStartOf="@+id/button"
                            app:layout_constraintTop_toBottomOf="@+id/button" />

                        <ImageView
                            android:id="@+id/appScreenshotHolder"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/app_screenshot_content_desc"
                            android:src="@android:drawable/ic_menu_report_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="h,16:9"
                            app:layout_constraintEnd_toStartOf="@+id/appScreenshotHolder2"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/screenshotsDesc" />

                        <ImageView
                            android:id="@+id/appScreenshotHolder2"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:contentDescription="@string/app_screenshot_content_desc"
                            android:src="@android:drawable/ic_menu_report_image"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="H,16:9"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/appScreenshotHolder"
                            app:layout_constraintTop_toBottomOf="@+id/screenshotsDesc" />
        
                </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
</LinearLayout>